# android-spotlight

./: WORKSPACE  build.gradle
app/: BUILD.bazel
spotlight/: BUILD.bazel  build.gradle
