load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")
# Configuration options
option_setting(
    name = "build_variant",
    type = "string",
    default = "debug",
    values = ["debug", "release"],
)

option_setting(
    name = "enable_lint_checks",
    type = "boolean",
    default = True,
)


kt_android_library(
    name = "spotlightsample",
    custom_package = "com.takusemba.spotlightsample",
    srcs = glob(["src/main/java/**/*.kt"]),
    resource_files = glob(["src/main/res/**"]),
    manifest = "src/main/AndroidManifest.xml",
    exports_manifest = True,
    deps = [
        "//spotlight",
        artifact("androidx.appcompat:appcompat"),
        artifact("androidx.constraintlayout:constraintlayout"),
    ],
)

android_binary(
    name = "app",
    custom_package = "com.takusemba.spotlightsample",
    srcs = glob(["src/main/java/**/*.java"]),
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {
        "minSdkVersion": "19",
        "targetSdkVersion": "30",
    },
    visibility = ["//visibility:public"],
    deps = [
        ":spotlightsample",
    ],
)
# Test targets
android_test(
    name = "unit_tests",
    srcs = glob(["src/test/**/*.java", "src/test/**/*.kt"]),
    manifest = "src/test/AndroidManifest.xml",
    deps = [
        ":spotlightsample",
        artifact("androidx.test:core"),
        artifact("androidx.test:runner"),
        artifact("androidx.test.ext:junit"),
        artifact("org.mockito:mockito-core"),
    ],
)

android_test(
    name = "instrumentation_tests",
    srcs = glob(["src/androidTest/**/*.java", "src/androidTest/**/*.kt"]),
    manifest = "src/androidTest/AndroidManifest.xml",
    deps = [
        ":spotlightsample",
        artifact("androidx.test.espresso:espresso-core"),
    ],
)

